[tool.poetry]
name = "mqttsink"
version = "1.0.0"
description = ""
authors = ["Yann Belin <yann.belin@expereo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^1.6.1"
requests = "^2.30.0"
pydantic = "^2.12.5"
psutil = "^7.2.1"


[tool.poetry.group.dev.dependencies]
types-paho-mqtt = "^1.6.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
